--- a/_bibliography/conference_papers.bib
+++ b/_bibliography/conference_papers.bib
@@ -18,7 +18,7 @@
     year = {2024},
     presentation = {Keynote},
     location = {Leesburg, United States},
-    preview = {ICB 2024.webp},
+    preview = {ICB 2024.jpg},
 }
 
 @conference{11,
