--- a/_bibliography/conference_papers.bib
+++ b/_bibliography/conference_papers.bib
@@ -1,5 +1,14 @@
 ---
 ---
+@conference{14,
+    author = {陈煜成，林东强，姚善泾，谢友坪，陈剑锋},
+    title = {AI赋能生物药物层析工艺开发：从机理驱动到混合模型},
+    booktitle = {2025第八届生物化工青年学者论坛暨第十四届生物化工技术创新及产业发展研讨会},
+    year = {2025},
+    presentation = {Oral},
+    location = {上海, 中国},
+    preview = {ecust.jpg},
+}
 
 @conference{13,
     author = {Chen, Yu-Cheng and Sponchioni, Mattia and Lin, Dong-Qiang},
@@ -18,7 +27,7 @@
     year = {2024},
     presentation = {Keynote},
     location = {Leesburg, United States},
-    preview = {ICB 2024.jpg},
+    preview = {ICB-2024.jpg},
 }
 
 @conference{11,
