--- a/_bibliography/conference_papers.bib
+++ b/_bibliography/conference_papers.bib
@@ -25,7 +25,7 @@
     title = {Inert tracers for the distribution of residence time distribution in continuous processes: same properties, but still different},
     booktitle = {Integrated Continuous Biomanufacturing 2024},
     year = {2024},
-    presentation = {Keynote},
+    presentation = {Invited},
     location = {Leesburg, United States},
     preview = {ICB-2024.jpg},
 }
@@ -56,7 +56,7 @@
     title = {Model-based process optimization of ion-exchange chromatography for protein bioseparation},
     booktitle = {2023 AIChE Annual Meeting},
     year = {2023},
-    presentation = {Invited Talks},
+    presentation = {Invited},
     location = {Orlando, United States},
     preview = {AICHE.svg},
 }
@@ -76,7 +76,7 @@
     title = {Model-assisted process development and digital twin for continuous chromatography},
     booktitle = {14th European Congress of Chemical Engineering and 7th European Congress of Applied Biotechnology},
     year = {2023},
-    presentation = {Keynote},
+    presentation = {Invited},
     location = {Berlin, Germany},
     preview = {DECHEMA.svg},
 }
