--- a/_news/zh-cn/20251101.md
+++ b/_news/zh-cn/20251101.md
@@ -4,4 +4,4 @@ date: 2025-11-01 08:00:00
 inline: true
 ---
 
-[我的个人主页上线啦！](https://ycchen-fzu.github.io/):sparkles: :smile:
+[个人主页上线啦！](https://ycchen-fzu.github.io/):sparkles: :smile:
