--- a/_news/zh-cn/20251115.md
+++ b/_news/zh-cn/20251115.md
@@ -4,4 +4,4 @@ date: 2025-11-15 08:00:00
 inline: true
 ---
 
-[我的福大主页上线啦！](https://jszy.fzu.edu.cn/ycchen/zh_CN/index.htm)
+[福大主页上线啦！](https://jszy.fzu.edu.cn/ycchen/zh_CN/index.htm)
